# liquid-staking-onchain-sdk

./: Cargo.toml  README.md
marinade-finance/: Cargo.toml
marinade-finance/tests/: Cargo.toml
marinade-referral/src/: lib.rs
marinade-referral/src/marinade_referral/: set_validator_score.rs  stake_reserve.rs
marinade-sdk/: Cargo.toml
marinade-sdk/src/: lib.rs  marinade_sdk.rs  utility.rs
marinade-sdk/src/marinade_finance_sdk/: remove_liquidity.rs
marinade-sdk/src/marinade_sdk/: add_liquidity.rs  claim.rs  config_validator_system.rs  deactivate_stake.rs  liquid_unstake.rs  order_unstake.rs  set_lp_params.rs  update_cooling_down_todo.rs
src/: lib.rs
src/callable_functions/: add_liquidity.rs  claim.rs  deposit.rs  deposit_stake_account.rs  liquid_unstake.rs  mod.rs  order_unstake.rs  remove_liquidity.rs
src/marinade_finance_sdk/: add_validator.rs  change_authority.rs  config_marinade.rs  deposit.rs  deposit_stake_account.rs  emergency_unstake.rs  initialize.rs  merge_stakes.rs  remove_validator.rs  update_active.rs  update_deactivated.rs
