[package]
name = "liquid-staking-onchain-sdk"
version = "0.1.0"
description = "Marinade Finance Onchain SDK"
edition = "2018"
repository = "https://github.com/marinade-finance/liquid-staking-onchain-sdk"

[dependencies]
anchor-lang = "^0.14.0"
anchor-spl = "^0.14.0"
marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program" }

[features]
no-entrypoint = [ "marinade-finance/no-entrypoint" ]